buildscript {
	dependencies {
		classpath('io.swagger:swagger-codegen:2.2.2')
	}
}

plugins {
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'de.tudresden.inf.st'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.4'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'javax.validation:validation-api:2.0.1.Final'
	implementation 'io.swagger:swagger-annotations:1.6.7'
	implementation 'io.springfox:springfox-boot-starter:3.0.0'
	implementation 'com.rabbitmq:amqp-client:5.16.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.4'
	implementation 'org.postgresql:postgresql:42.5.0'
	implementation 'com.google.code.gson:gson:2.9.1'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0-rc1'
	implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
	implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

sourceSets {
    main {
        java {
            srcDirs 'src/main/java'
            srcDirs 'src/generated/java'
        }
    }
 }


import io.swagger.codegen.DefaultGenerator
import io.swagger.codegen.config.CodegenConfigurator

def swaggerSourceFile = 'openapi-spec/graphex-minimal.yaml'
def swaggerTargetFolder = 'src/generated/java'

task generateApi {
	doLast {
		def config = new CodegenConfigurator()
		config.setInputSpec("file:///$projectDir/$swaggerSourceFile")
		config.setOutputDir("$projectDir")
		config.setLang('spring')
		config.setAdditionalProperties([
				'interfaceOnly' : 'true',
				'apiPackage'    : 'de.tudresden.inf.st.mathgrassserver.apiModel',
				'modelPackage'  : 'de.tudresden.inf.st.mathgrassserver.model',
				'sourceFolder'  : swaggerTargetFolder
		])
		new DefaultGenerator().opts(config.toClientOptInput()).generate()
	}
}